Restricciones en Agendamiento

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/aprobado.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/aprobado.html
@@ -24,23 +24,15 @@
                 <center> 
                     <br>
                     <strong  style="color:blue; font-size:16px;" >
-                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> ¡Gracias por la preferencia! <br>  </h2>                                       
+                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> Registrado </h2>                                       
                     </strong>
-                    <br>
-                    <strong  style="color:black; font-size:20px;" >
-                         La Odontología se pondrá en contacto con usted
-                                                             
-                    </strong>
-                    <br>
-                    <i> para la posterior confirmación de la cita</i>
-
                  
                 </center>
               <br>
                <table  align="center" >
                         <tr>
                         <td>
-                            <a href="/agendamiento/calendario_usuario" class="btn btn-info">
+                            <a href="/agendamiento/calendar" class="btn btn-info">
                                 <i class="bi bi-calendar"></i>
                                 Ver Calendario <br>
                             </a>
@@ -56,14 +48,6 @@
                                     
                             </td>
                         {%endif%}
-                        
-                        &nbsp;
-                        <td>
-                            <a onclick="history.back()" class="btn btn-primary" style="margin: 10px;">
-                                <i class="bi-x-circle"></i>
-                                Atrás
-                            </a>
-                        </td>
                         </tr>
                 </table>
             </div>
