--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/horario_duplicado.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/horario_duplicado.html
@@ -7,7 +7,7 @@
                     
                            <br>
         <strong  style="color:blue; font-size:16px;" >
-                        <h2  <i class="bi bi-journal-x"></i> Duplicado. <img src="{% static 'img/horario.jpg' %}" width="130px" alt="auto"> <br> Usted ya cuenta con una cita  <br> en la misma fecha y hora </h2>                                       
+                        <h2  <i class="bi bi-journal-x"></i> Duplicado. <img src="{% static 'img/horario.jpg' %}" width="130px" alt="auto"> <br> Usted ya cuenta con una cita  <br> en la misma fecha</h2>                                       
                     </strong> <br>
 
                        <center> <small><b> Por favor verifique nuevamente el calendario </b> </small></center>
