--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <center> 
                     <strong  style="color:blue; font-size:16px;" >
-                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> Cita del Paciente Modificada </h2>                                       
+                        <h2 <i class="bi bi-hand-thumbs-up-fill"></i> Registrado </h2>                                       
                     </strong>
                   
                 </center>
