--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/mensajes/tratamiento_asignado_exitoso.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/mensajes/tratamiento_asignado_exitoso.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+{{paciente}}
 <form method="post">
 	{% csrf_token %}
     <div class="col-1 col-md-6 offset-md-3">
@@ -17,11 +18,12 @@
                             <i class="bi bi-check2-square"></i>
                             Aceptar
                         </a>
-                         {% comment %} <a class="btn btn-primary" style="margin: 10px;" href ="/tratamiento/listar_tratamientos_asignados/{{paciente.id_paciente}}/">
+                       
+                        <a class="btn btn-primary" style="margin: 10px;" href ="/tratamiento/listar_tratamientos_asignados/{{paciente.id_paciente}}">
                                             <i class="bi bi-check2-square"></i>
                                         Tratamiento asignado
-                                        </a>
- {% endcomment %}
+                        </a>
+ 
 
                         {% comment %} {%if tratamientos_asignados%}
                                     {%for tratamiento in tratamientos_asignados%}
