--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/asignar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/asignar_tratamiento.html
@@ -36,7 +36,7 @@
                         </button>
                         <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
-                            Atras
+                            Atrás
                         </a>
                     </div>
                     <hr>
