--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -56,24 +56,25 @@
                                 <th>Nro Insumo</th>
                                 <th>Nombre </th>
                                 <th>Costo Unitario</th>  
-                                <th>Fecha de Caducidad</th> 
+                                <!-- <th>Fecha de Caducidad</th>  -->
                                 <th>Cantidad Insumo</th>
-                                <th>Unidad por Paquete, Caja o Litro</th>
+                                <!-- <th>Unidad por Paquete, Caja o Litro</th> -->
                                 <th>Cantidad Unitaria</th>
-                                <th>Unidad</th> 
+                                <th>Unidad de Medida</th> 
                                 <!-- <th>Estado</th>  -->
                                 <th colspan="2"><center>Acciones</center>  </th>
                             </tr>
                         </thead>
 
                         <tbody>
-                            {%for c in listado_insumos%}
+                            {%for c in insumos%}
                                 <tr>
                                     <td >{{forloop.counter}}</td>
                                     <td >{{c.nombre_insumo}}</td>
-                                    <td>{{c.precio}}</td> 
-                                    <td>{{c.fecha_caducidad}}</td> 
+                                    <td>{{c.precio}} Gs.</td> 
+                                    <!-- <td>{{c.fecha_caducidad}}</td>  -->
                                     <td>{{c.cantidad_insumo}}</td> 
+                                    <td>{{c.cantidad_unitaria}}</td> 
                                     <td>{{c.unidad}}</td> 
                                     <!-- <td>{{c.estado}}</td>  -->
                                     {{busqueda}}
