--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
@@ -56,6 +56,12 @@
                             <br>
                             <div class="form-group">
                                 <p>
+                                    <label for="{{form.unidad.name}}">{{form.unidad.label}}</label></p>
+                                    {{form.unidad}} </p>
+                                </div>
+                            <br>
+                            <div class="form-group">
+                                <p>
                                     <label for="{{form.unidad_x_paquete.name}}">{{form.unidad_x_paquete.label}}</label></p>
                                     {{form.unidad_x_paquete}} </p>
                                 </div>
@@ -68,13 +74,11 @@
                             <br>
                             <div class="form-group">
                                 <p>
-                                    <label for="{{form.unidad.name}}">{{form.unidad.label}}</label></p>
-                                    {{form.unidad}} </p>
+                                    <label for="{{form.stock_minimo.name}}">{{form.stock_minimo.label}}</label></p>
+                                    {{form.stock_minimo}} </p>
                                 </div>
                             <br>
                             </Table>
-                   
-
                         <br>
                         <div class="d-flex justify-content-center">
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
