cambios de restricciones y mensajes

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_noReservada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_noReservada.html
@@ -7,7 +7,7 @@
 
         <h2 style="color:red;">
             
-                        <br> Usted ya cuenta con una cita <br>en esta fecha                                 
+                        <br> Ya se cuenta con una cita <br>en esta fecha                                 
         </h2>
           <img src="{% static 'img/check.PNG' %}" width="120px" alt="auto"> 
 
