--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_noAutoagendada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_noAutoagendada.html
@@ -4,13 +4,16 @@
 <form method="post">
 	{% csrf_token %}
     <center>
-                    
-                           <br>
-        <strong  style="color:blue; font-size:16px;" >
-                        <h2  <i class="bi bi-journal-x"></i> Duplicado. <img src="{% static 'img/horario.jpg' %}" width="130px" alt="auto"> <br> Ya se cuenta con una cita  <br> en la misma fecha</h2>                                       
-                    </strong> <br>
 
-                       <center> <small><b> Por favor verifique nuevamente el calendario </b> </small></center>
+        <h2 style="color:black;">
+            
+                        <br> Ya se cuenta con una cita <br>en esta fecha                                 
+        </h2>
+          {% comment %} <img src="{% static 'img/check.PNG' %}" width="120px" alt="auto">  {% endcomment %}
+
+                       <center> <small  style="font-size:20px;"><i> La misma ya se habia <b>agendado </b>  con anterioridad</i></small></center>
+                       <br>
+                        <center> <small  style="font-size:20px; color:red;"><i> Y se le ha <b>asignado </b> a usted.</i></small></center>
                        <br>
                         {% comment %} <button  href="/agendamiento/usuario_addCita/{{user.numero_documento}} " class="btn btn-primary" type="submit" style="margin: 10px;">
                            Agendar una cita 
