--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -14,9 +14,10 @@
             <div class="card-body">
                 <center> 
                     <h2>
-                        <i class="bi bi-cash-coin">Tratamientos a cobrar</i> 
+                        <i style="color:green;"  class="bi bi-cash-coin">Tratamientos a <i style="color:green;"> Cobrar</i></i> 
                     </h2>
                 </center>
+                <br>
                     <center>
                         <h4>
                             <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i>
