--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
@@ -1,14 +1,15 @@
 {%extends 'panel_control/base.html'%}
-
+{% load static %}
 {% block content %}
 	<!-- {%if perms.gestion_administrativo.view_especialistasalud%} -->
 		<div class="container">
 			<div class="card">
 				<div class="card-body">
-					<center>  <h2> <i class="bi-file-earmark-medical"></>Listado de Cobros realizados</i></h2> </center>
+					<center>  <h2> <i style="color:green;" class="bi bi-coin"></i> <b>Cobros Realizados</b></i></h2> </center>
 				<br>
 				<br>
-
+			
+				
 				<table class="table table-striped table-hover">
 					<thead style="border: 1cm;">
 						<tr>
