--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
@@ -4,7 +4,8 @@
 	<div class="container">
 		<div class="card">
 			<div class="card-body">
-				<center>  <h2>	 <i class="bi-person-lines-fill">Listado de pacientes con cobros pendientes</i></h2> </center>
+				<center>  <h2>	 <i class="bi bi-currency-dollar"></i>Pacientes con  <b>Cobros Pendientes</b></i></h2> </center>
+			
 				<br>
 				<br>
 				<br>
