--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
@@ -13,7 +13,8 @@
         <div class="card">
             <div class="card-body">
                 <center> 
-                    <h2 <i class="bi bi-clipboard2-pulse"> Tratamientos pendientes</i> </h2>
+                    <h2>  Tratamientos pendientes </h2>
+                      <h3>  <i class="bi bi-clock-history"></i> </h3>
                 </center>
                 <br>
                 <table>
@@ -88,7 +89,7 @@
                     <div class="d-flex justify-content-center">
                         <a class="btn btn-secondary" onclick = "history.back ()" >
                             <i class="bi-x-circle"></i> 
-                            Atras
+                            Atrás
                         </a>
                     </div>
                 </table>
