--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/panel_control.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/panel_control.html
@@ -10,6 +10,9 @@
                     <div class="carousel-item active">
                       <img src="{% static 'img/modelo1.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
                     </div>
+                    <div class="carousel-item ">
+                      <img src="{% static 'img/logo7.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
+                    </div>
                     <div class="carousel-item">
                       <img src="{% static 'img/tiempo.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
                     </div>
@@ -19,6 +22,7 @@
                     <div class="carousel-item ">
                       <img src="{% static 'img/odontologia.jpg' %}"  class="d-block w-100" alt="..." width="550" height="400">
                     </div>
+                   
                 </div> 
             </div>
 {% endblock %} 
