--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -132,10 +132,17 @@
                                             <!--OPCIONES Modificar y Eliminar-->
                                               <td>
                                                     {%if perms.gestion_agendamiento.change_cita%}
-                                                    <a href="/agendamiento/modificar_cita/{{c.id_cita}}" class="btn btn-primary">
-                                                        <i class="bi-pencil-square"></i>
-                                                        Modificar
-                                                    </a>
+                                                        {%if c.estado_tratamiento%}
+                                                        <a href="/agendamiento/visualizar_cita/{{c.id_cita}}" class="btn btn-primary">
+                                                            <i class="bi bi-card-checklist"></i>
+                                                            Visualizar
+                                                        </a>
+                                                        {%else%}
+                                                            <a href="/agendamiento/modificar_cita/{{c.id_cita}}" class="btn btn-primary">
+                                                                <i class="bi-pencil-square"></i>
+                                                                Modificar
+                                                            </a>
+                                                        {%endif%}
                                                     {%endif%}
                                               </td>
 
