Inicio de implementación de "Mis tratamientos a realizar"

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
@@ -73,7 +73,7 @@
                             <i class="bi-save"></i>
                             Guardar
                         </button>
-                        <a href="/agendamiento/listado_citas/ " class="btn btn-danger" style="margin: 10px;">
+                        <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
                             Cancelar
                         </a>
