Corrección de Mis Tratamientos pendientes

--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/mensajes/mostrar_mensaje_confirmacion.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/mensajes/mostrar_mensaje_confirmacion.html
@@ -20,7 +20,7 @@
                         <i class="bi bi-check2-circle"></i>
                         Estoy seguro
                     </a>
-                    <a class= "btn btn-danger" href="/tratamiento/listar_tratamientos_pendientes/">
+                    <a class= "btn btn-danger" onclick="history.back()">
                         <i class="bi bi-x-circle"></i>
                         Cancelar
                     </a>
