--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
@@ -51,10 +51,16 @@
                                             <!-- {%if perms.gestion_tratamiento.delete_tratamiento%} -->
                                                 <td>
                                                     <!-- <a href="/tratamiento/realizar_pregunta/{t.id}" class="btn btn-success"> -->
-                                                    <a href="/tratamiento/realizar_pregunta/{{t.id_tratamiento_conf}}" class="btn btn-success">
-                                                        <i class="bi bi-check2-circle" ></i> 
-                                                        Confirmar
-                                                    </a>
+                                                    {%if t.fecha_pasada%}
+                                                        <a class="btn btn-success" href="/agendamiento/modificar_cita/{{t.id_cita}}" role="button">
+                                                            <i class="bi bi-arrow-counterclockwise"></i>Reagendar
+                                                        </a>
+                                                    {%else%}
+                                                        <a href="/agendamiento/visualizar_datos_cita/{{t.id_cita}}" class="btn btn-primary">
+                                                            <i class="bi bi-card-checklist"></i>
+                                                            Visualizar
+                                                        </a>
+                                                    {%endif%}
                                                 </td>
                                             <!-- {%endif%} -->
                                         </tr>
