Corrección de modificar_cita
-Implemente una nueva vista para modificar cita: la funcion modificar_cita2.

Aparte de algunas correcciones en template de agregar horario y redireccion al eliminar horario.

Tambien aumente el tamaño de los atributos direccion, nombre y apellido en Persona

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_solapada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_solapada.html
@@ -7,9 +7,11 @@
                     
         <br>
         <strong  style="color:blue; font-size:16px;" >
-            <h2  <i class="bi bi-journal-x"></i><b> Duplicación de Cita</b>
+            <h2  <i class="bi bi-journal-x"></i><b> Sobreposición de citas</b>
                <br>
-                <br>La misma cita ya ha sido registrada anteriormente
+                <br>La cita coincide en hora y fecha 
+                <br> con otra agendada para el mismo paciente
+                <h4>Por favor, verifique los datos.</h4>
             </h2>
         </strong> <br>
             <br>
