--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_paciente2.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_paciente2.html
@@ -6,113 +6,115 @@
         <div class="card">
             <br>
             <center>  <h2>Agregar Paciente</h2> </center>    
-                  <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
-                        <i class="bi bi-person-plus"> ¡ Ingrese los datos del paciente ! </i>
+                    <small> <b>   ¡ Ingrese los datos del paciente ! </small>
                 </div>
             
             <div class="card-body">
                 <form method="POST">
-                    {% csrf_token %}
+                    {%csrf_token%}
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
-                                <b><label for="{{form2.nombre.name}}">{{form2.nombre.label}}</label></b>
+                                <label for="{{form2.nombre.name}}">{{form2.nombre.label}}</label>
                                 {{form2.nombre}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.apellido.name}}">{{form2.apellido.label}}</label></b>
+                                <label for="{{form2.apellido.name}}">{{form2.apellido.label}}</label>
                                 {{form2.apellido}}
                             </div>
                             <br>
+                            {% if messages %}
+                                <ul class="messages">
+                                    {% for message in messages %}
+                                        <li{% if message.error %} class="{{ message.error }}"{% endif %}>{{ message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
                             <div class="form-group">
-                                <b><label for="{{form2.numero_documento.name}}">{{form2.numero_documento.label}}</label></b>
+                                <label for="{{form2.numero_documento.name}}">{{form2.numero_documento.label}}</label>
                                 {{form2.numero_documento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.direccion.name}}">{{form2.direccion.label}}</label></b>
+                                <label for="{{form2.direccion.name}}">{{form2.direccion.label}}</label>
                                 {{form2.direccion}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.telefono.name}}">{{form2.telefono.label}}</label></b>
+                                <label for="{{form2.telefono.name}}">{{form2.telefono.label}}</label>
                                 {{form2.telefono}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.correo_electronico.name}}">{{form2.correo_electronico.label}}</label></b>
+                                <label for="{{form2.correo_electronico.name}}">{{form2.correo_electronico.label}}</label>
                                 {{form2.correo_electronico}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.fecha_nacimiento.name}}">{{form2.fecha_nacimiento.label}}</label></b>
+                                <label for="{{form2.fecha_nacimiento.name}}">{{form2.fecha_nacimiento.label}}</label>
                                 {{form2.fecha_nacimiento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.sexo.name}}">{{form2.sexo.label}}</label></b>
+                                <label for="{{form2.sexo.name}}">{{form2.sexo.label}}</label>
                                 {{form2.sexo}}
                             </div>
                             <br>
-                            <hr>
-                            <center><h4 style="font:italic;">Ingrese su antecedente clinico</h4></center>
-                            <div class="form-group">
-                                <b><label for="{{form.grupo_sanguineo.name}}">{{form.grupo_sanguineo.label}}</label></b>
-                                {{form.grupo_sanguineo}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <b><label for="{{form.enfermedad_base.name}}">{{form.enfermedad_base.label}}</label></b>
-                                {{form.enfermedad_base}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <b><label for="{{form.alergia.name}}">{{form.alergia.label}}</label></b>
-                                {{form.alergia}}
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <b><label for="{{form.tolerancia_anestecia.name}}">{{form.tolerancia_anestecia.label}}</label></b>
+                            <!-- <div class="form-group">
+                                <label for="{{form.tolerancia_anestecia.name}}">{{form.tolerancia_anestecia.label}}</label>
                                 {{form.tolerancia_anestecia}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form.frecuencia_higiene_bucal.name}}">{{form.frecuencia_higiene_bucal.label}}</label></b>
+                                <label for="{{form.frecuencia_higiene_bucal.name}}">{{form.frecuencia_higiene_bucal.label}}</label>
                                 {{form.frecuencia_higiene_bucal}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form.medicamento.name}}">{{form.medicamento.label}}</label></b>
+                                <label for="{{form.medicamento.name}}">{{form.medicamento.label}}</label>
                                 {{form.medicamento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form.cirugias.name}}">{{form.cirugias.label}}</label></b>
+                                <label for="{{form.cirugias.name}}">{{form.cirugias.label}}</label>
                                 {{form.cirugias}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form.caries.name}}">{{form.caries.label}}</label></b>
+                                <label for="{{form.caries.name}}">{{form.caries.label}}</label>
                                 {{form.caries}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form.afeccion_cronica_familiar.name}}">{{form.afeccion_cronica_familiar.label}}</label></b>
-                                {{form.afeccion_cronica_familiar}}
+                                <label for="{{form.grupo_sanguineo.name}}">{{form.grupo_sanguineo.label}}</label>
+                                {{form.grupo_sanguineo}}
                             </div>
                             <br>
- 
-                         </table>
-                    </div>  
+                            <div class="form-group">
+                                <label for="{{form.enfermedad_base.name}}">{{form.enfermedad_base.label}}</label>
+                                {{form.enfermedad_base}}
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label for="{{form.alergia.name}}">{{form.alergia.label}}</label>
+                                {{form.alergia}}
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label for="{{form.afeccion_cronica_familiar.name}}">{{form.afeccion_cronica_familiar.label}}</label>
+                                {{form.afeccion_cronica_familiar}}
+                            </div> -->
+                        </table>
+                    </div>
 
                     <div class="d-flex justify-content-center">
                         <button class="btn btn-primary" type="submit" style="margin: 10px;">
                             <i class="bi-save"></i>
                             Guardar
                         </button>
-                        <a href="/administrativo/listar_paciente/" class="btn btn-danger" style="margin: 10px;">
+                        <a href="/administrativo/listar_funcionario/" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
                             Cancelar
                         </a>
@@ -121,9 +123,9 @@
                     <table  align="right" >
                         <tr>
                             <td> 
-                                <a href="/administrativo/agregar_paciente/" class="btn btn-success">
+                                <a href="/administrativo/agregar_funcionario/" class="btn btn-success">
                                     <i class="bi-person-plus-fill"></i>
-                                    Agregar otro paciente
+                                    Agregar otro funcionario
                                 </a> 
                             </td>
                         </tr>
@@ -135,9 +137,9 @@
                     <table  align="left" >
                         <tr>
                             <td> 
-                                <a href="/administrativo/listar_paciente/" class="btn btn-info">
+                                <a href="/administrativo/listar_funcionario/" class="btn btn-info">
                                     <i class="bi-view-list"></i>
-                                    Ver listado de pacientes
+                                    Ver listado de funcionarios
                                 </a> 
                             </td>
                         </tr>
