--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_hora.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/agregar_hora.html
@@ -4,7 +4,6 @@
 
 {%load static%}
 
-
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
      
@@ -12,21 +11,16 @@
 {%endblock%}
 <!--Cuadro de DIALOGO DE ELIMINAR-->
 
-
-
 {%block content%}
   
-
 {%if perms.gestion_agendamiento.view_cita%}
-    <div class="container">
+    <div class="col-12 col-md-4 offset-md-4">
         <div class="card">
             <div class="card-body">
                 <center> 
-                        
-                    <h2 <i class="bi bi-calendar"></i> Horario</i> </h2>
+                    <h2> <i class="bi bi-calendar"></i> Agregar Horario</i> </h2>
                 </center>
               <br>
-          
                 <form method="POST" id="group_form" novalidate="">
                     {%csrf_token%}
                         {%if mensaje%}
@@ -43,8 +37,8 @@
                         <br> {% endcomment %}
                           
                         <div class="form-group">
-                           <label for="{{form.hora.name}}"> {{form.hora.label}}</label>
-                            {{form.hora}}
+                           <label for="{{form.hora.name}}"> <b>{{form.hora.label}}</b></label>
+                            {{form.hora}} <b>hs</b>
                         </div> 
                         <br>
                     </div>
