--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/hora_pasada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/hora_pasada.html
@@ -5,7 +5,7 @@
 	{% csrf_token %}
     <center>
                         <h3> <img src="{% static 'img/aviso.jpg' %}" width="100px" alt="auto"> <br>
-                           <br>  <u>La hora o, la fecha  </u> <b>  
+                           <br>  <u>La hora  </u> <b>  
                               <b style="color:red;"> ya pasó</b> <br> <br>
                               <i>No se puede reservar esta cita  </i> 
                        </h3>                                       
