--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_paciente.html
@@ -20,13 +20,14 @@
 			{%endif%}
 		</td>
 		</tr>
+		<br>
 	</table>
 	<br>
-	<br>
+
 					  <form  class="form-inline" method="POST">
                             {% csrf_token %}
                             <div class="input-group">
-                                <input type="search" name="q"  class="form-control bg-light border-0 small" placeholder="Buscar por el nombre " aria-label="search" value="{{request.POST.buscar}}" >
+                                <input type="search" name="q"  class="form-control bg-light border-0 small" placeholder="Buscar por el nombre " aria-label="search" value="{{request.POST.busqueda}}" >
                                 <br>
                                 <div class="input-group-append">
                                     <button  class="btn btn-outline-primary my-2 my-sm-0" type="submit">
@@ -40,8 +41,6 @@
                         </form>
 					<br>
 					
-	<br>
-
 	<table class="table table-striped table-hover">
 		<thead style="border: 1cm;">
 			<tr>
