Correción de Mis tratamientos a realizar e Historial clinico

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -106,8 +106,7 @@
                             Detalle previo
                         </a>
                         &nbsp;
-                        <!-- <a type="submit" href="/cobros/registrar_cobro/{{persona.numero_documento}}/" class="btn btn-success btn-block txt-white"> -->
-                            <a type="submit" href="/cobros/verificar_fecha_hora_cita/{{persona.numero_documento}}" class="btn btn-success btn-block txt-white">
+                        <a type="submit" href="/cobros/verificar_datos_cita/{{persona.numero_documento}}/{{menor_edad}}" class="btn btn-success btn-block txt-white">
                             <i class="bi bi-check2-square"></i>
                             Cobrar
                         </a>
