--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_solapada.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/cita_solapada.html
@@ -7,7 +7,7 @@
                     
         <br>
         <strong  style="color:blue; font-size:16px;" >
-            <h2  <i class="bi bi-journal-x"></i><b> Sobreposición de citas</b>
+            <h2  <i class="bi bi-journal-x"></i><b> ¡Atención!</b>
                <br>
                 <br>La cita coincide en hora y fecha 
                 <br> con otra agendada para el mismo paciente
