--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_mis_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_mis_tratamientos_pendientes.html
@@ -20,7 +20,10 @@
                         </b>
                     </h2>
                     {%if tratamientos_pendientes%}
-                        <h5>A ser realizados por el Odontólogo: <b>{{profesional}}</b></h5>
+                        <h5>
+                            A ser realizados por el Odontólogo: 
+                            <b>{{profesional.numero_documento.nombre}} {{profesional.numero_documento.apellido}}</b>
+                        </h5>
                     {%endif%}
                 </center>
                 <br>
@@ -102,12 +105,14 @@
                                 {% endif %}
                         </tbody>
                     </table>
-                    <div class="d-flex justify-content-center">
-                        <a class="btn btn-secondary" onclick = "history.back ()" >
-                            <i class="bi-x-circle"></i> 
-                            Atrás
-                        </a>
-                    </div>
+                    {%if tratamientos_pendientes%}
+                        <div class="d-flex justify-content-center">
+                            <a class="btn btn-secondary" onclick = "history.back ()" >
+                                <i class="bi-x-circle"></i> 
+                                Atrás
+                            </a>
+                        </div>
+                    {%endif%}
                 </table>
             </div>
         </div>
