--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
@@ -63,12 +63,12 @@
                                                             {{form.unidad_x_paquete}} </p>
                                                         </div>
                                                     <br>
-                                                    <div class="form-group">
+                                                    <!-- <div class="form-group">
                                                         <p>
                                                             <label for="{{form.cantidad_unitaria.name}}">{{form.cantidad_unitaria.label}}</label></p>
                                                             {{form.cantidad_unitaria}} </p>
                                                         </div>
-                                                    <br>
+                                                    <br> -->
                                                     <div class="form-group">
                                                         <p>
                                                             <label for="{{form.stock_minimo.name}}">{{form.stock_minimo.label}}</label></p>
